k8s/vueser.yml
apiVersion: v1
kind: Service
metadata:
  name: vueser
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 80      # 5173이 아니라 80으로 바꿔야 한다.
  selector:
    app: vuekube
